[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-base"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ib_async>=2.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trading_base*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: requires IBKR paper account"]
